--- a/imports/assets/scss/main.sass
+++ b/imports/assets/scss/main.sass
@@ -142,6 +142,7 @@ button:disabled
         width: 4px
 
 .layout-admin
+  overflow-x: hidden
   overflow-y: auto
   height: 100vh
 
